reduce the spacing between the headers fix some spelling errors and added a Payments option to the Fast Navigation section

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,7 @@
     transform: rotate(360deg);
   }
 }
+
+.dluJDj {
+  padding: 0px !important;
+}
